missingno info added

--- a/Housing_initial_eda_jupyter.ipynb
+++ b/Housing_initial_eda_jupyter.ipynb
@@ -513,16 +513,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x209f23ba668>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x209f261d748>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -540,6 +540,18 @@
     }
    ],
    "source": [
+    "# The dendrogram uses a hierarchical clustering algorithm (courtesy of scipy) to bin variables against one another by their nullity correlation (measured in terms of binary distance). \n",
+    "# At each step of the tree the variables are split up based on which combination minimizes the distance of the remaining clusters. \n",
+    "# The more monotone the set of variables, the closer their total distance is to zero, and the closer their average distance (the y-axis) is to zero.\n",
+    "\n",
+    "# To interpret this graph, read it from a top-down perspective. \n",
+    "# Cluster leaves which linked together at a distance of zero fully predict one anothers presence—\n",
+    "# one variable might always be empty when another is filled, or they might always both be filled or both empty, and so on. \n",
+    "# In this specific example the dendrogram glues together the variables which are required and therefore present in every record.\n",
+    "\n",
+    "# Cluster leaves which split close to zero, but not at it, predict one another very well, but still imperfectly.\n",
+    "\n",
+    "\n",
     "msno.dendrogram(housing)"
    ]
   },
