--- a/Housing_initial_eda_jupyter.ipynb
+++ b/Housing_initial_eda_jupyter.ipynb
@@ -1104,10 +1104,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([nan, 'Pave', 'Grvl'], dtype=object)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "housing['Alley'].unique()"
+   ]
   },
   {
    "cell_type": "code",
